@@ -35,7 +35,6 @@ int get_runtime_left (const hashcat_ctx_t *hashcat_ctx)
   time (&runtime_cur);
 
   const int runtime_left = (int) (status_ctx->runtime_start
-                                + status_ctx->prepare_time
                                 + user_options->runtime
                                 + (msec_paused / 1000)
                                 - runtime_cur);
